# NumVerse

./: CMakeLists.txt  README.md  run_tests.sh
doc/: architecture.md  magic-square.md  make-24.md  number-chaos.md  number-maze.md  number-tetris.md  sum-boom.md
src/: NumVers.pro  main.cpp
src/logic/: board.cpp  board.h  cell_state.h  game_cell.h  game_config.h  score_board.cpp  score_board.h  selection.cpp  selection.h
src/logic/data/: board.h  cell_state.h  difficulty.h  game_cell.cpp  game_cell.h  game_config.h  game_result.h  game_state.h  game_status.h  level_data.cpp  level_data.h  selection.h
tests/: CMakeLists.txt  test_board.cpp  test_game_cell.cpp  test_level_data.cpp  test_main.cpp  test_score_board.cpp  test_selection.cpp
tests/data/: test_game_cell.cpp  test_level_data.cpp
